Adding dplyr as a depends to the Description file

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,8 @@ Description: This package is for automating the processing of Qualtrics surveys.
     format.
 License: BSD
 LazyData: true
+Depends:
+    dplyr
 Imports:
     digest,
     dplyr,
