Updating get_setup to used the revised version of getting reorganized questions and blocks. Also cleaning up an issue with quesiton and block reorganization to work if we don't have any side-by-side questions to split. This also added the tidyverse to the description file, but that may change in a later version.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,8 @@ Description: This package is for automating the processing of Qualtrics surveys.
 License: BSD
 LazyData: true
 Depends:
-    dplyr
+    dplyr,
+    tidyverse
 Imports:
     digest,
     dplyr,
