--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: Automating Qualtrics Survey Processing
 Version: 0.1.0
 Author: Christian Testa
-Maintainer: Christian Testa <christian.testa@tufts.edu>
+Maintainer: Emma Morgan <emma.morgan@tufts.edu>
 Description: This package is for automating the processing of Qualtrics surveys.
     The Shiny app included serves as an easy-to-use interface for generating reports
     from survey data from Qualtrics. Further, other functions allow the user to
@@ -12,7 +12,7 @@ Description: This package is for automating the processing of Qualtrics surveys.
 License: BSD
 LazyData: true
 Depends:
-    dplyr
+
 Imports:
     digest,
     dplyr,
