Updated the discription file.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,7 +30,8 @@ Imports:
     tidyr,
     xtable,
     XML,
-    shinyFiles
+    shinyFiles,
+    shinyDirectoryInput
 Suggests: 
     testthat,
     knitr,
