Added rlist to the list of required packages.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,7 +31,8 @@ Imports:
     xtable,
     XML,
     shinyFiles,
-    shinyDirectoryInput
+    shinyDirectoryInput,
+    rlist
 Suggests: 
     testthat,
     knitr,
