Adding here package to imports in the description; this should allow the shiny app FAQ to work.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,22 +17,23 @@ Imports:
     DT,
     gdata,
     gtools,
+    here,
     htmltools,
     httpuv,
     magrittr,
     plyr,
+    Rcpp,
     reshape,
     readxl,
     rjson,
-    Rcpp,
+    rlist,
     shiny,
     shinydashboard,
-    tidyr,
-    xtable,
-    XML,
     shinyFiles,
     shinyDirectoryInput,
-    rlist
+    tidyr,
+    xtable,
+    XML
 Suggests: 
     testthat,
     knitr,
